Feat-Change words to English and manipulate container limit 70% size on main screen

--- a/style/main.css
+++ b/style/main.css
@@ -84,3 +84,11 @@ header nav a:hover{
 .button-main-movie i{
   margin-right: 4px;
 }
+
+.container{
+  margin-left: 24px;
+}
+
+.main-movie .container{
+  width: 70%;
+}
