Feat-Added JQuery and owl caroulse configs - js/css/html - render movies

--- a/style/main.css
+++ b/style/main.css
@@ -92,3 +92,9 @@ header nav a:hover{
 .main-movie .container{
   width: 70%;
 }
+
+.box-movies{
+  height: 100%;
+  width: 100%;
+  display: block;
+}
